# pyside-settings-manager

./: .gitignore  README.md  coverage.json  missing_cov.py  pyproject.toml
.github/workflows/: publish-pypi.yaml  tests.yaml
examples/: basic.py
qt_settings_manager/: __init__.py  settings.py
qt_settings_manager/tests/: conftest.py  main_test.py
src/pyside_settings_manager/: __init__.py  settings.py
src/tests/: conftest.py  main_test.py  test_settings.py
