[project]
name = "pyside-settings-manager"
version = "0.0.1"
description = "A simple settings manager for PySide6"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.8.2.1",
    "pytest-cov>=6.0.0",
    "pytest-repeat>=0.9.4",
    "pytest-xdist>=3.6.1",
]
authors = [{ name = "Daniel Castro", email = "danicc097@gmail.com" }]
license = { text = "Apache Software License 2.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/danicc097/pyside-settings-manager"
"Bug Tracker" = "https://github.com/danicc097/pyside-settings-manager/issues"
"Source" = "https://github.com/danicc097/pyside-settings-manager"

[dependency-groups]
dev = ["hatchling>=1.27.0", "mypy>=1.15.0", "pytest>=8.3.5", "pytest-qt>=4.4.0"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
addopts = [
  "-n", "2",
  # base config. cov not actually run until passing --cov=./src
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-report=json",
]
filterwarnings = [
    # harmless
    "ignore:Failed to disconnect \\(method\\) from signal",
]

[tool.coverage.run]
source = ["src/pyside_settings_manager"]
omit = [
  "tests/*",
  "*/tests/*",
  "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
]
